--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "jikan-node",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Wrapper for the unofficial MAL api, Jikan",
   "main": "jikan-node.js",
   "directories": {
     "lib": "lib"
   },
   "dependencies": {
-    "node-fetch": "^2.3.0"
+    "node-fetch": "^2.3.0",
+    "package-lock.json": "^1.0.0"
   },
   "devDependencies": {},
   "scripts": {
