--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "jikan-node",
-  "version": "1.1.2",
+  "version": "1.2.0",
   "description": "Wrapper for the unofficial MAL api, Jikan",
   "main": "jikan-node.js",
   "directories": {
     "lib": "lib"
   },
   "dependencies": {
-    "node-fetch": "^2.3.0",
-    "package-lock.json": "^1.0.0"
+    "cross-fetch": "^3.0.2"
   },
   "devDependencies": {},
   "scripts": {
