--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
   "name": "jikan-node",
-  "version": "1.2.0",
+  "version": "2.0.0",
   "description": "Wrapper for the unofficial MAL api, Jikan",
-  "main": "jikan-node.js",
+  "main": "dist/jikan-node.js",
   "directories": {
     "lib": "lib"
   },
   "dependencies": {
-    "cross-fetch": "^3.0.2"
+    "@types/node": "^13.9.8",
+    "@types/qs": "^6.9.1",
+    "cross-fetch": "^3.0.2",
+    "qs": "^6.9.3",
+    "typescript": "^3.8.3"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "ts-node ./src/jikan-node.ts",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
@@ -24,7 +29,9 @@
     "js",
     "jikan",
     "mal",
-    "api"
+    "api",
+    "ts",
+    "typescript"
   ],
   "author": "xy137",
   "license": "ISC",
